# ab-uplift-analysis

./: README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
notebook/: ab_results.html  ab_results.ipynb
reports/tables/: cupac_summary_gbm.csv  ipw_aipw_summary.csv  power_summary.csv  primary_effect_summary.csv  smd_table.csv  uplift_qini_gains.csv  uplift_qini_meta.csv  uplift_topk_policy.csv
scripts/: run_all.py
src/ab_uplift/: __init__.py  ab_stats.py  causal.py  cli.py  config.py  cupac.py  data_loader.py  power.py  uplift.py
