# pyproject.toml  — consolidated (no duplicate tables)

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
ab-uplift-run = "ab_uplift.cli:main"

[project]
name = "ab-uplift"                     # distribution name (import package is ab_uplift)
version = "0.1.0"
description = "A/B testing, uplift modeling, Qini, CUPAC and causal metrics."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "you@example.com"}]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "matplotlib>=3.7"
]

# ✅ only ONE of these tables is allowed – keep all extras here
[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "pre-commit",
  "ruff>=0.4",
  "mypy>=1.5"
]
notebook = [
  "jupyterlab",
  "ipykernel"
]
viz = [
  "seaborn>=0.12"
]
gbm = [
  "lightgbm>=4.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
